--- a/css/personal.css
+++ b/css/personal.css
@@ -1,24 +1,112 @@
 body{
   font-family: 'Raleway', sans-serif;
+  background: url("images/1.jpg") no-repeat center center fixed;
+}
+header{
+  height: 70px;
+  background-color: white;
+  border-bottom:white;
+
+}
+h3{
+  text-align: center;
+  border-bottom: black;
+  border-radius: 2%;
+  background-color: hsla(0%, 0%, 50%, 0.1);
+  text-decoration: underline;
+}
+footer{
+  background-image: url("images/1.jpg");
+  background-repeat: repeat-y;
+  overflow: hidden;
+}
+li span{
+  float:bottom;
 }
 .container{
-  background-color: blue;
+  background: white;
 }
-.education{
-  background-color: green;
+#nav{
+
+
 }
-.jobexperience{
-  background-color:grey;
+#education{
+  height: 300px;
 }
-.why-code{
-  background-color:blue;
+#education{
+  list-style-type: none;
 }
-.hobbies{
-  background-color:green;
+#education ul{
+  list-style-type: none;
 }
-.projects{
-  background-color:grey;
+#job-experience ul{
+  list-style-type: none;
+  text-align: center;
 }
+}
+#job-experience h3{
+  position: center;
+}
+
+}
+#why-code{
+  background-color:;
+}
+
+}
+#why-code{
+  text-align:center;
+}
+#hobbies{
+  background-color:;
+}
+#hobbies li{
+ display:inline;
+ padding-left: 14.5%;
+
+}
+#projects{
+  background-color:;
+}
+#projects ul{
+    text-align:right;
+    list-style-type: none;
+}
+
 .name{
-  float:right;
+position: center;
+}
+
+img{
+
+  height:60px;
+  width:60px;
+  border-radius: 50% 50%;
+  display: inline;
+}
+.jumbotron{
+  position: relative;
+   background:url(../images/personal.css) center center;
+   width: 100%;
+   height: 100%;
+   background-size: cover;
+
+}
+.jumbotron img{
+  height:50%;
+  width: 100%;
+  border-radius: 2%;
+  overflow: hidden;
+  background-repeat: repeat-y;
+
+
+}
+.jumbotron h1{
+  float:center;
+  position: absolute;
+}
+#banner{
+  background-image: url("images/1.jpg");
+  background-repeat: repeat-y;
+  overflow: hidden;
 }
