--- a/css/personal.css
+++ b/css/personal.css
@@ -1,6 +1,7 @@
 body{
   font-family: 'Raleway', sans-serif;
   background: url("images/1.jpg") no-repeat center center fixed;
+
 }
 header{
   height: 70px;
@@ -8,23 +9,27 @@ header{
   border-bottom:white;
 
 }
+li{
+  text-align: center;
+  list-style: none;
+  float:center;
+}
 h3{
   text-align: center;
   border-bottom: black;
   border-radius: 2%;
-  background-color: hsla(0%, 0%, 50%, 0.1);
+  background: hsla(0%, 0%, 50%, 0.1);
   text-decoration: underline;
 }
 footer{
-  background-image: url("images/1.jpg");
+  background-color: hsla(0%, 0%, 0%, 0.1);
   background-repeat: repeat-y;
   overflow: hidden;
 }
-li span{
-  float:bottom;
-}
+
 .container{
-  background: white;
+  background: hsla(0%, 0%, 0%, 0.1);
+  text-align: center;
 }
 #nav{
 
@@ -47,36 +52,40 @@ li span{
 #job-experience h3{
   position: center;
 }
-
-}
-#why-code{
-  background-color:;
+#why-code p{
+  padding-top: 20px;
 }
 
+}
+#why-code h3 {
+  text-align: center;
 }
 #why-code{
   text-align:center;
+  margin-bottom: 100px;
 }
-#hobbies{
-  background-color:;
+
 }
-#hobbies li{
- display:inline;
- padding-left: 14.5%;
+#hobbies ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 
 }
 #projects{
-  background-color:;
+  text-align: center;
 }
 #projects ul{
     text-align:right;
     list-style-type: none;
 }
+h1{
+  color:white;
 
-.name{
-position: center;
 }
-
+a{
+  color:black;
+}
 img{
 
   height:60px;
@@ -90,6 +99,7 @@ img{
    width: 100%;
    height: 100%;
    background-size: cover;
+   margin-bottom:100px;
 
 }
 .jumbotron img{
@@ -105,8 +115,6 @@ img{
   float:center;
   position: absolute;
 }
-#banner{
-  background-image: url("images/1.jpg");
-  background-repeat: repeat-y;
-  overflow: hidden;
+.clear{
+  clear: both;
 }
